Adding base board image and rudimentary scripting

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <html>
+<script src="monopoly.js" ></script>
+<head>
+	<title>
+		Welcome to Mon*poly AI
+	</title>
+</head>
+<body onload="OnLoad()">
+	<canvas id="myCanvas" width="1018" height="1018" style="border:1px solid"></canvas><br>
+
+	<a target="_blank" href="https://vecteezy.com">Board background from Vecteezy. Free Vectors by Vecteezy.com</a>
+</body>
 </html>
