Simple player asset printout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 	</title>
 </head>
 <body onload="OnLoad()">
+
+	<table>
+	<tr>
+	<td>
 	<canvas id="myCanvas" width="1018" height="1018" style="border:1px solid"></canvas><br>
+	</td>
+	<td>
+	<div id="players"> </div>
+	</td>	
 
 	<a target="_blank" href="https://vecteezy.com">Board background from Vecteezy. Free Vectors by Vecteezy.com</a>
 </body>
