More work on implementing cards

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <script src="ui.js" ></script>
 <script src="monopoly.js" ></script>
+<script src="cards.js" ></script>
 <head>
 	<title>
 		Welcome to Mon*poly AI
