Moving AI to separate file

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <script src="ui.js" ></script>
 <script src="monopoly.js" ></script>
 <script src="cards.js" ></script>
+<script src="AI_naive.js" ></script>
 <head>
 	<title>
 		Welcome to Mon*poly AI
