Some ugly hacks to make it possible for the game to play repeatedly

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<td>
 	<div id="players"> </div>
 	</td>	
-
+	</table>
+	<div id="winlog"></div>
 	<a target="_blank" href="https://vecteezy.com">Board background from Vecteezy. Free Vectors by Vecteezy.com</a>
 </body>
 </html>
