Adding basic statistics recording, all board states recorded. Cleaned up a little bit of flickering for UI redraw

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <script src="monopoly.js" ></script>
 <script src="cards.js" ></script>
 <script src="AI_naive.js" ></script>
+<script src="statistics.js"></script>
 <head>
 	<title>
 		Welcome to Mon*poly AI
